# YOLOv5-PySide6_Hokage_Recognition

./: .dockerignore  .editorconfig  .env.example  CITATION.cff  Dockerfile  Makefile  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-docker.txt  requirements-gui.txt
.devcontainer/: Dockerfile
.github/workflows/: codeql.yml
docs/: docker.md  getting-started.md  index.md  license-audit.md  migration.md
docs/usage/: gui.md  training.md
examples/: README.md
legacy/: README.md
reports/: README.md
scripts/: smoke_train.py
src/hokage_vision/: __init__.py  __main__.py  cli.py
src/hokage_vision/agents/: tools.py
src/hokage_vision/training/: __init__.py  jobs.py  registry.py  smoke.py  trainer.py
src/hokage_vision/ui/: __init__.py  app.py  i18n.py  main_window.py  theme.py  workers.py
src/hokage_vision/ui/widgets/: agent_chat_panel.py  batch_detection_panel.py  image_detection_panel.py  result_table.py  settings_panel.py  statistics_panel.py  video_detection_panel.py
tasks/: lessons.md  todo.md
tests/gui/: test_agent_chat_panel.py  test_batch_detection_panel.py  test_image_detection_panel.py  test_main_window_smoke.py  test_settings_panel.py  test_video_detection_panel.py
tests/unit/: test_package_import.py
