[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hokage-vision-agent"
version = "0.1.0"
description = "An agentic computer vision workbench for anime character detection, powered by YOLO, PySide6, Docker, and tool-calling workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Hokage Vision Agent Contributors" },
]
keywords = ["computer-vision", "yolo", "pyside6", "fastapi", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "numpy>=1.26",
  "pillow>=10.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
  "pytest-qt>=4.4",
]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]
agent = []
llm = [
  "openai>=1.30",
  "langgraph>=0.2",
]
train = [
  "ultralytics>=8.2",
]
package = [
  "build>=1.2",
  "twine>=5.1",
]
desktop-build = [
  "pyinstaller>=6.8",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-qt>=4.4",
  "ruff>=0.5",
  "pre-commit>=3.7",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]
all = [
  "PySide6>=6.7",
  "pytest-qt>=4.4",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "openai>=1.30",
  "langgraph>=0.2",
  "ultralytics>=8.2",
  "build>=1.2",
  "twine>=5.1",
  "pyinstaller>=6.8",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "pre-commit>=3.7",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/Phoenix0531-sudo/YOLOv5-PySide6_Hokage_Recognition"
Documentation = "https://phoenix0531-sudo.github.io/YOLOv5-PySide6_Hokage_Recognition/"
Repository = "https://github.com/Phoenix0531-sudo/YOLOv5-PySide6_Hokage_Recognition"
Issues = "https://github.com/Phoenix0531-sudo/YOLOv5-PySide6_Hokage_Recognition/issues"

[project.scripts]
hokage-vision = "hokage_vision.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hokage_vision"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "gui: PySide6 GUI tests",
  "integration: integration tests",
  "packaging: package build tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "apps", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
